@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jjazzlab</groupId>
     <artifactId>jjazzlab-parent</artifactId>
-    <version>4.0-BETA1</version>
+    <version>4.0-BETA2</version>
     <packaging>pom</packaging>
     <name>jjazzlab</name>
     
@@ -35,18 +35,14 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>         
-
-        <netbeans.run.params.ide/>  <!-- Additional options set by Netbeans IDE see customizable Build actions -->
-        <netbeans.run.params>${netbeans.run.params.ide} -J-Dnetbeans.modules.quiet=true -J--add-modules=jdk.incubator.foreign -J--enable-native-access=ALL-UNNAMED -J--enable-preview -J--add-opens=java.base/java.net=ALL-UNNAMED -J--add-opens=java.base/java.lang=ALL-UNNAMED -J--add-opens=java.desktop/javax.swing=ALL-UNNAMED -J--add-exports=java.desktop/sun.awt=ALL-UNNAMED -J--add-opens=java.base/java.util=ALL-UNNAMED</netbeans.run.params>                               
-        <netbeans.version>RELEASE190</netbeans.version>
+        <netbeans.version>RELEASE200</netbeans.version>
         <brandingToken>jjazzlab</brandingToken> <!-- used for nbm:cluster-app configuration -->
         <jjazzlab.maven.compiler.plugin.version>3.11.0</jjazzlab.maven.compiler.plugin.version>
         <jjazzlab.compiler.release>17</jjazzlab.compiler.release>
         <jjazzlab.javac.fork>false</jjazzlab.javac.fork>
         <jjazzlab.javac.showDeprecation>true</jjazzlab.javac.showDeprecation>
         <jjazzlab.javac.showWarnings>true</jjazzlab.javac.showWarnings>
-        <jjazzlab.javac.xlint>-Xlint:all</jjazzlab.javac.xlint>
-        <jjazzlab.surefire.plugin.version>3.1.0</jjazzlab.surefire.plugin.version>
+        <jjazzlab.javac.xlint>-Xlint:all,-serial</jjazzlab.javac.xlint>
         <jjazzlab.surefire.skipTests>true</jjazzlab.surefire.skipTests>
         <jjazzlab.forceEnglish>false</jjazzlab.forceEnglish>
     </properties>
@@ -127,7 +123,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${jjazzlab.surefire.plugin.version}</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <skipTests>${jjazzlab.surefire.skipTests}</skipTests>
                     </configuration>
@@ -150,20 +146,7 @@
         </pluginManagement>
     </build>
     
-    <profiles>
-        <profile>
-            <id>jjazzlabextra</id>
-            <activation>
-                <file>
-                    <exists>${basedir}/../JJazzLabExtra/pom.xml</exists>
-                </file>
-            </activation>                
-            <modules>
-                <module>../JJazzLabExtra</module>                
-            </modules>
-        </profile>        
-    </profiles>
-    
+          
     <modules>
         <module>application</module>
         <module>branding</module>
